# build-ui-work-journal-remix-app

./: .gitignore  Makefile  dune  dune-project  my-remix-app.opam  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: root.tsx  session.tsx
app/components/: entry-form.tsx
app/routes/: _index.tsx  entries.$entryId.edit.tsx  login.tsx
prisma/: dev.db  dev.db-journal  schema.prisma
reason_app/: dune  root.tsx  tailwind.css
reason_app/components/: dune
reason_app/routes/: _index.tsx  dune  entries.$entryId.edit.tsx  login.tsx
reason_bindings/: server.re
