; (subdir
;  node_modules
;  (subdir
;   reason-promise/src/js
;   (library
;    (name promise)
;    (modes melange)
;    (preprocess
;     (pps melange.ppx)))))

(melange.emit
 (target output)
 (alias react)
 (module_systems es6)
 (libraries app bindings))

; (env
;  (dev
;   (flags
;    (:standard -warn-error -69-32-26))))

(rule
 (alias promote-app)
 (mode
  (promote (until-clean)))
 (deps
  (alias_rec react))
 (targets
  (dir app))
 (action
  (bash
   "mkdir app && cp -r output/reason_app/*.* app && cp -r output/reason_bindings app && cp -r output/node_modules app")))
