(lang dune 3.8)

(using melange 0.1)

(using directory-targets 0.1)

(name my-remix-app)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/build-ui-work-journal-remix-app)

(bug_reports https://github.com/psb/build-ui-work-journal-remix-app/issues)

(package
 (allow_empty)
 (name my-remix-app)
 (synopsis "Work Journal")
 (description "Work Journal"))
